--- a/sbdemo0109/sbdemo0109.csproj
+++ b/sbdemo0109/sbdemo0109.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.AI.OpenAI" Version="1.0.0-beta.17" />
     <PackageReference Include="OpenAI" Version="1.7.2" />
   </ItemGroup>
 
